--- a/src/main.css
+++ b/src/main.css
@@ -149,3 +149,98 @@ font-weight: 500;
 .change-greeting-btn:hover {
     background-color: #21a1f1;
 }
+/* main.css */
+
+@media (max-width: 1024px) {
+  header img {
+    width: 40%;
+    margin-left: 30%;
+  }
+
+  .navbar-links ul {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-links ul li {
+    margin-bottom: 10px;
+  }
+
+  .greeting-container {
+    text-align: center;
+  }
+
+  #ckimg {
+    width: 250px;
+    height: 250px;
+    margin-left: 60%;
+  }
+}
+
+@media (max-width: 768px) {
+  header img {
+    width: 60%;
+    margin-left: 20%;
+  }
+
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar-links ul {
+    flex-direction: column;
+    align-items: center;
+    display: none;
+  }
+
+  .navbar-links ul li {
+    margin: 15px 0;
+  }
+
+  .toggle-button {
+    display: inline-block;
+  }
+
+  #ckimg {
+    width: 200px;
+    height: 200px;
+    margin-left: 50%;
+  }
+}
+
+@media (max-width: 480px) {
+  header img {
+    width: 80%;
+    margin-left: 10%;
+  }
+
+  .navbar-links ul {
+    width: 100%;
+  }
+
+  .navbar-links ul li {
+    text-align: center;
+    margin: 10px 0;
+  }
+
+  .brand-title {
+    font-size: 1.2rem;
+  }
+
+  #ckimg {
+    width: 150px;
+    height: 150px;
+    margin-left: 40%;
+  }
+
+  .greeting-container {
+    padding: 10px;
+    text-align: center;
+  }
+
+  #changeGreetingBtn {
+    width: 100%;
+    font-size: 1rem;
+  }
+}
